--- a/doc/homolog.ipynb
+++ b/doc/homolog.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Table of Contents\n",
-    " <p><div class=\"lev1\"><a href=\"#Meiotic-Homolog-Pairing\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Meiotic Homolog Pairing</a></div><div class=\"lev2\"><a href=\"#Testing-Code\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Testing Code</a></div><div class=\"lev3\"><a href=\"#Rouse-behavior\"><span class=\"toc-item-num\">1.1.1&nbsp;&nbsp;</span>Rouse behavior</a></div><div class=\"lev3\"><a href=\"#Confinement\"><span class=\"toc-item-num\">1.1.2&nbsp;&nbsp;</span>Confinement</a></div><div class=\"lev3\"><a href=\"#Connectivity\"><span class=\"toc-item-num\">1.1.3&nbsp;&nbsp;</span>Connectivity</a></div><div class=\"lev2\"><a href=\"#Simulations\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Simulations</a></div>"
+    " <p><div class=\"lev1\"><a href=\"#Meiotic-Homolog-Pairing\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Meiotic Homolog Pairing</a></div><div class=\"lev2\"><a href=\"#Testing-Code\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Testing Code</a></div><div class=\"lev3\"><a href=\"#Rouse-behavior\"><span class=\"toc-item-num\">1.1.1&nbsp;&nbsp;</span>Rouse behavior</a></div><div class=\"lev3\"><a href=\"#Ornstein-Uhlenbeck-test\"><span class=\"toc-item-num\">1.1.2&nbsp;&nbsp;</span>Ornstein-Uhlenbeck test</a></div><div class=\"lev3\"><a href=\"#Confinement\"><span class=\"toc-item-num\">1.1.3&nbsp;&nbsp;</span>Confinement</a></div><div class=\"lev3\"><a href=\"#Connectivity\"><span class=\"toc-item-num\">1.1.4&nbsp;&nbsp;</span>Connectivity</a></div><div class=\"lev2\"><a href=\"#Simulations\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Simulations</a></div>"
    ]
   },
   {
@@ -70,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import wlcsim\n",
     "from wlcsim.bd import rouse\n",
-    "N = int(1e2+1); L = 17475; R = 1000; b = 15; D = 2e7 # ChrV\n",
+    "N = int(1e2+1); L = 17.475; R = 1; b = 0.015; D = 2e1 # ChrV\n",
     "dt = rouse.recommended_dt(N, L, b, D)\n",
     "Aex = 0; # no confinement\n",
     "N_tot, loop_list = rouse.homolog_points_to_loops_list(N, []) # no loops\n",
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i_i = [np.round(i).astype(int) for i in i_i]"
+    "i_i = [np.round(i).astype(int) for i in i_i] # numba workaround"
    ]
   },
   {
@@ -285,6 +285,13 @@
     "\n",
     "plt.yscale('log'); plt.xscale('log');\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ornstein-Uhlenbeck test"
    ]
   },
   {
@@ -441,7 +448,7 @@
    "source": [
     "###  Confinement\n",
     "\n",
-    "As seen above, if the confinement size is made \"large enough\", the simulation\n",
+    "As seen above, if the confinement size is made \"weak enough\", the simulation\n",
     "behaves as it should in the absense of a confinement.\n",
     "\n",
     "The MSD should plateau at the radius of the confinement."
@@ -453,7 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = int(1e2+1); L = 17475; R = 1000; b = 15; D = 2e7 # ChrV\n",
+    "N = int(1e2+1); L = 17.475; R = 1.000; b = 0.015; D = 2e1 # ChrV\n",
     "dt = rouse.recommended_dt(N, L, b, D)\n",
     "Aex = 100; # multiplier on confinement force\n",
     "N_tot, loop_list = rouse.homolog_points_to_loops_list(N, []) # no loops\n",
@@ -538,7 +545,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = int(1e2+1); L = 17475; R = 1000; b = 15; D = 2e7 # ChrV\n",
+    "N = int(1e2+1); L = 17.475; R = 1.000; b = 0.015; D = 2e1 # ChrV\n",
     "dt = rouse.recommended_dt(N, L, b, D)\n",
     "Aex = 100; # multiplier on confinement force\n",
     "N_tot, loop_list = rouse.homolog_points_to_loops_list(N, []) # no loops\n",
@@ -737,35 +744,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([   1,    2,    3, ..., 9997, 9998, 9999]),\n",
-       " array([  0,   1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12,\n",
-       "         13,  14,  15,  16,  17,  18,  19,  20,  21,  22,  23,  24,  25,\n",
-       "         26,  27,  28,  29,  30,  31,  32,  33,  34,  35,  36,  37,  38,\n",
-       "         39,  40,  41,  42,  43,  44,  45,  46,  47,  48,  49,  50,  51,\n",
-       "         52,  53,  54,  55,  56,  57,  58,  59,  60,  61,  62,  63,  64,\n",
-       "         65,  66,  67,  68,  69,  70,  71,  72,  73,  74,  75,  76,  77,\n",
-       "         78,  79,  80,  81,  82,  83,  84,  85,  86,  87,  88,  89,  90,\n",
-       "         91,  92,  93,  94,  95,  96,  97,  98,  99, 100]),\n",
-       " array([0, 1, 2])]"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[np.unique(li) for li in np.where(np.isnan(x))]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [],
@@ -799,11 +777,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = int(1e2+1); L = 17475; R = 1000; b = 15; D = 2e7 # ChrV\n",
+    "N = int(1e2+1); L = 17.475; R = 1.000; b = 0.015; D = 2e1 # ChrV\n",
     "dt = rouse.recommended_dt(N, L, b, D)\n",
     "Aex = 0; # no confinement\n",
     "N_tot, loop_list = rouse.homolog_points_to_loops_list(N, [0]) # only one end tethered\n",
     "tether_list = np.array([]).astype(int) # no tethered loci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = rouse._jit_rouse_homologs(N, N_tot, tether_list, loop_list, L, b, D, Aex, R, R, R, t, t_save)"
    ]
   },
   {
@@ -837,11 +824,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = int(1e2+1); L = 17475; R = 1000; b = 15; D = 2e7 # ChrV\n",
+    "N = int(1e2+1); L = 17.475; R = 1.000; b = 0.015; D = 2e1 # ChrV\n",
     "dt = rouse.recommended_dt(N, L, b, D)\n",
     "Aex = 0; # no confinement\n",
     "N_tot, loop_list = rouse.homolog_points_to_loops_list(N, [0, 100]) # only one end tethered\n",
     "tether_list = np.array([]).astype(int) # no tethered loci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = rouse._jit_rouse_homologs(N, N_tot, tether_list, loop_list, L, b, D, Aex, R, R, R, t, t_save)"
    ]
   },
   {
@@ -865,18 +861,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Generating Pairing Sites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our simulation as written is purely Brownian Dynamics, (no Gillespie component). This means that we treat the \"existing\" homolog paired sites as fixed and ask how the polymer fluctuates assuming no new connections are formed.\n",
+    "\n",
+    "Thus, our method for choosing which sites are \"paired\" in a given simulation will greatly affect our results.\n",
+    "\n",
+    "By default, all of our simulations will simply choose pairing sites uniformly according to some density `FP`. That is, each individual bead will have a probability $0\\leq\\texttt{FP}\\leq1$ of being paired.\n",
+    "\n",
+    "However, we present below an alternative strategy for choosing these sites, that involves explicitly simulating the dynamic process of homolog pairing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### $k_h \\lll k_\\text{loop}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the limit as the rate of polymer loop formation eclipses the rate of stable homolog junction formation (i.e. if it requires many \"kissing\" events to form a stable homolog junction), then we can treat the homolog pairing process approximately as a Markov chain where the transition rates from a given loci being unpaired to paired simply are proportional to the looping probabilities for the ring polymer defined by its nearest neighbors (where there already exists a junction) to the left and right."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### No Unpairing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the case $k_h \\lll k_\\text{loop}$ and where we don't allow unpairing events to occur, we can actually analytically compute the final loop size distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO copy from notes to here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Simulations\n",
     "\n",
     "Simulate two rouse chains in confinement, various connectivities.\n",
     "\n",
     "The ura3 gene is on ChrV, spanning bases 116167--116970. ChrV is 576874 bases, and budding yeast have a mean linker length of 15bp (as estimated based on a nucleosome repeat length (NRL) of \\~165bp). This corresponds to a WLC with an effective persistence length of \\~15nm in theta-solvent conditions (see Beltran & Kannan et al, PRL 2019).  This number has elsewhere been estimated to be as low as 5nm experimentally (Hajjoul et al, Genome Research 2013). Since only 15/165\\~9% of DNA is in linkers (linear distance along this effective WLC) ChrV's \\~3496 nucleosomes each cover about one third of a Kuhn length.  Meaning the chain can be thought of as being made of 1165 Kuhn lengths of 15nm each (for 17475nm total).\n",
     "\n",
-    "So in nm, L=17475, b=15, and N=101 is used to give 100 segments of equal length.\n",
+    "So in $\\mu$m, L=17.475, b=0.015, and N=101 is used to give 100 segments of equal length. (which would make the ura3 locus bead 20).\n",
     "\n",
-    "The nucleus has a radius of about a micron, and loci reach the confinement after about a minute. Because their Rouse diffusion has basically the form $1.9544100*b*D^{1/2}t^{1/2}$, then we can calculate that $1000^2 nm^2 = 1.95441 \\times 15 nm \\times D^{1/2} um/s^{1/2} \\times 60^{1/2} s^{1/2}$. In other words, $D \\approx 2e7 nm^2/s$.\n",
-    "So R=1000, D=2e7.\n",
+    "The nucleus has a radius of about a micron, and loci reach the confinement after about a minute. Because their Rouse diffusion has basically the form $1.9544100*b*D^{1/2}t^{1/2}$, then we can calculate that $1^2 \\mu{}m^2 = 1.95441 \\times 0.015 \\mu{}m \\times D^{1/2} um/s^{1/2} \\times 60^{1/2} s^{1/2}$. In other words, $D \\approx 19.39 \\mu{}m^2/s$.\n",
+    "So R=1.000, D=2e1.\n",
     "\n",
-    "Notice that since the terminal relaxation time of the polymer is $N^2 b^2/D)\n"
+    "Notice that since the terminal relaxation time of the polymer is $N^2 b^2/D$...\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assuming that we can treat the maximum attained MSD value as the confinement size, approximately, we can just use teh MSD at time 30 as a proxy for the confinement size, since it's basically flat after that.\n",
+    "\n",
+    "If we look at the distribution of these values in the data, we see that the squared displacement has a distribution which is linear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msds = msds.msd(burgess.df_flat, mscd=True, include_z=True, traj_group=burgess.cell_cols, groups=burgess.cell_cols)\n",
+    "m = sds.reset_index()\n",
+    "data = m[m['delta'] == 30]['mean'].values\n",
+    "data = data[~np.isnan(data)]\n",
+    "Y, X = np.histogram(data)\n",
+    "scipy.stats.linregress(X[3:], Y[2:])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the above gives output of \n",
+    "\n",
+    "    >>> LinregressResult(slope=-648.6107382252995, intercept=1340.988095238095, rvalue=-0.9865990280608326, pvalue=5.956260174887604e-06, stderr=43.79162733110961)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if we don't square the values, we see that we get a peak at around 0.8um, which I guess will be the mean confinement radius. this is close enough to the current simulation value of ~1um.\n",
+    "\n",
+    "If we use t=60, 90, or 120s instead, we still get values around 1um, like 1.02um to 1.12um..."
    ]
   },
   {
