--- a/doc/rouse.ipynb
+++ b/doc/rouse.ipynb
@@ -71,21 +71,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Green's functions"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Spherically confined"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Plots"
    ]
@@ -93,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def plot_G_in_sphere(a, b, N, r0=None):\n",
@@ -137,7 +145,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# parameters of chain/confinement\n",
@@ -149,7 +159,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# grid a sphere\n",
@@ -173,6 +185,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -197,7 +210,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -243,7 +258,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -321,7 +338,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### Integral"
@@ -523,7 +541,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### Test tplquad"
@@ -628,7 +647,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "#### Compare to free G in large confinement"
    ]
@@ -636,7 +658,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -655,7 +679,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "here's the naive approach"
    ]
@@ -663,7 +689,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -695,7 +723,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "if we take too many l's, eventually we get NaN, because scipy.special.sph_harm fails to compute the spherical harmonnics of order like Y_100^100, for example."
    ]
@@ -703,7 +733,9 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -735,7 +767,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "To be honest, since $r'$ is $\\vec{0}$, we know the Green's function will be spherically symmetric, so only the $l=m=0$ term of the expansion is needed. In addition, after like 20 or so zeros of the spherical BesselJ's, the coefficients of the expansion are smaller than floating eps, so we can just do"
    ]
@@ -743,7 +777,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -775,7 +811,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Should evaluate to a Gaussian with std deviation $Nb^2$"
    ]
@@ -783,7 +821,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "gaus = ( 3/(2*np.pi * (N*b**2)) )**(3/2) * np.exp(-(3/2) * r**2/(N*b**2))"
@@ -793,6 +833,7 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -899,6 +940,7 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -969,6 +1011,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1075,6 +1118,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1179,7 +1223,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "YESSSSS"
    ]
@@ -1187,7 +1233,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1239,7 +1287,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1291,7 +1341,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -1344,16 +1396,51 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Free Green's function"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "I mean, it's just a Gaussian, centered at $r'$, with std dev $Nb^2$...."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## R^2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spherically confined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from the Green's function, we can get the $R^2$ by integrations....\n",
+    "\n"
    ]
   },
   {
