bd code for wlc polymer simulation

--- a/analysis/brownian_dynamics/01_Brownian_Dynamics_of_WLC_Polymer.ipynb
+++ b/analysis/brownian_dynamics/01_Brownian_Dynamics_of_WLC_Polymer.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create Brownian Dyanmics Simulation of a Rouse Polymer"
+    "# Create Brownian Dynamics Simulation of a Worm-Like Chain Polymer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import wlcsim\n",
-    "from wlcsim.bd import rouse, homolog\n",
+    "from wlcsim.bd import tsswlc #No need to import the rouse module anymore\n",
     "from wlcsim.bd import runge_kutta"
    ]
   },
@@ -143,14 +143,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Run Simulation with with_integrator\n",
-    "# x = rouse.with_integrator(runge_kutta.srk1/runge_kutta.lena4)\n",
-    "bead_coords= rouse.with_integrator(N, L, b, D, t, integrator = runge_kutta.rk4_thermal_lena)"
+    "By default, with_integrator uses rouse_f.  We need to redirect it to use tsswlc force instead. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'wlcsim.bd.tsswlc' has no attribute 'with_integrator'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-f56165a346c0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbead_coords\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mtsswlc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_integrator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mL\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mintegrator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrunge_kutta\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrk4_thermal_lena\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'wlcsim.bd.tsswlc' has no attribute 'with_integrator'"
+     ]
+    }
+   ],
+   "source": [
+    "bead_coords= tsswlc.with_integrator(N, L, b, D, t, integrator = runge_kutta.rk4_thermal_lena)"
    ]
   },
   {
